--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/a0dd33caf5.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -26,5 +30,6 @@
   <body>
     <h1>Hello World</h1>
     <p>Hi there</p>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
