--- a/index.html
+++ b/index.html
@@ -28,8 +28,13 @@
     <link rel="stylesheet" href="/styles/portfolio.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>🙋‍♀️ Hello, I am</p>
+      <h1>Freya Collie</h1>
+      <h2 class="mb-5">Front-end developer based in the UK</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact Me</a>
+      </div>
+    </div>
   </body>
 </html>
