started on navbar

--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,11 @@
         </p>
         <h3>X</h3>
         <p>
-          <a href="https://x.com/freya" target="_blank">@freya</a>
+          <a href="https://www.x.com/freya" target="_blank">@freya</a>
         </p>
         <h3>Instagram</h3>
         <p>
-          <a href="https://instagram.com/freya.codes" target="_blank"
+          <a href="https://www.instagram.com/freya.codes" target="_blank"
             >@freya.codes</a
           >
         </p>
