--- a/index.html
+++ b/index.html
@@ -121,19 +121,30 @@
         </div>
       </div>
       <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding"> Contact Me </a>
+          </div>
+        </div>
         <div class="d-flex justify-content-center mb-5">
           <a href="mailto:collie.freya@gmail.com" class="email-link"
             >collie.freya@gmail.com</a
           >
         </div>
-        <div class="social-links d-flex justify-content-center mb-5">
-          <a href="https://github.com/Amel-coder-dot" target="_blank">
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://www.instagram.com/freya.codes" target="_blank">
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="">
+          <a href="https://github.com/Amel-coder-dot" target="_blank">
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="">
+          <a href="https://www.x.com/freya" target="_blank">
             <i class="fa-brands fa-twitter"></i>
           </a>
         </div>
