--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Freya is a front-end engineer based in the UK."
+    />
+    <title>Front-end developer - Freya Collie</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +29,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="#">
-        <img src="/images/shecodeslogo.png" alt="" class="logo" />
+        <img src="/images/shecodeslogo.png" alt="Freya logo" class="logo" />
       </a>
       <button
         class="navbar-toggler"
@@ -41,18 +45,20 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="/">
+            <a class="nav-link" href="/" title="Homepage">
               Home <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="About Freya">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="Contact Freya"
+              >Contact</a
+            >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/work.html">Work</a>
+            <a class="nav-link" href="/work.html" title="Freya's Work">Work</a>
           </li>
         </ul>
       </div>
@@ -62,7 +68,9 @@
       <h1>Freya Collie</h1>
       <h2 class="mb-5">Front-end developer based in the UK</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact Me</a>
+        <a href="/contact.html" class="btn btn-branding" title="Contact Me"
+          >Contact Me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -71,7 +79,11 @@
     <div clas="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="/images/yogurt.png" class="img-fluid" alt="" />
+          <img
+            src="/images/yogurt.png"
+            class="img-fluid"
+            alt="Yogurt Project Preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -82,7 +94,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn More </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn More
+            </a>
           </div>
         </div>
       </div>
@@ -96,16 +110,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn More </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn More
+            </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="/images/weather.png" class="img-fluid" alt="" />
+          <img
+            src="/images/weather.png"
+            class="img-fluid"
+            alt="Weather Project Preview"
+          />
         </div>
       </div>
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="/images/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="/images/dictionary.png"
+            class="img-fluid"
+            alt="Dictionary Project Preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -116,7 +140,9 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn More </a>
+            <a href="/work.html" class="btn btn-branding-outline">
+              Learn More
+            </a>
           </div>
         </div>
       </div>
@@ -125,29 +151,54 @@
           class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding"> Contact Me </a>
+            <a
+              href="/contact.html"
+              class="btn btn-branding"
+              title="Contact Freya"
+            >
+              Contact Me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:collie.freya@gmail.com" class="email-link"
+          <a
+            href="mailto:collie.freya@gmail.com"
+            class="email-link"
+            title="Email Freya"
             >collie.freya@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.instagram.com/freya.codes" target="_blank">
+          <a
+            href="https://www.instagram.com/freya.codes"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fa-brands fa-instagram"></i>
           </a>
-          <a href="https://github.com/Amel-coder-dot" target="_blank">
+          <a
+            href="https://github.com/Amel-coder-dot"
+            target="_blank"
+            title="Github Profile"
+          >
             <i class="fa-brands fa-github"></i>
           </a>
-          <a href="https://www.x.com/freya" target="_blank">
-            <i class="fa-brands fa-twitter"></i>
+          <a href="https://www.x.com/freya" target="_blank" title="X Profile">
+            <i class="fa-brands fa-x"></i>
           </a>
         </div>
+        <p class="text-center mt-5">
+          🫰 This project was coded by Freya, and it is
+          <a
+            href="https://github.com/Amel-coder-dot/portfolio-project"
+            target="_blank"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
     <script
