--- a/work.html
+++ b/work.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Contact Freya - Freya is a front-end engineer based in the UK."
+    />
+    <title>Contact Freya - Freya Collie</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +29,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
       <a class="navbar-brand" href="#">
-        <img src="/images/shecodeslogo.png" alt="" class="logo" />
+        <img src="/images/shecodeslogo.png" alt="Freya's Logo" class="logo" />
       </a>
       <button
         class="navbar-toggler"
@@ -41,16 +45,18 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html"> Home </a>
+            <a class="nav-link" href="/index.html" title="Homepage"> Home </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="/about.html" title="About Freya">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact</a>
+            <a class="nav-link" href="/contact.html" title="Contact Freya"
+              >Contact</a
+            >
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="/"
+            <a class="nav-link" href="/" title="Freya's Work"
               >Work <span class="sr-only">(current)</span></a
             >
           </li>
@@ -65,7 +71,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="/images/yogurt.png"
-              alt=""
+              alt="Yogurt Project Preview"
               class="img-fluid mb-3 rounded"
             />
             <h3 class="text-center m-0">Yogurt Project</h3>
@@ -74,7 +80,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="/images/weather.png"
-              alt=""
+              alt="Weather App Preview"
               class="img-fluid mb-3 rounded"
             />
             <h3 class="text-center m-0">Weather Project</h3>
@@ -85,7 +91,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="/images/dictionary.png"
-              alt=""
+              alt="Dictionary App Preview"
               class="img-fluid mb-3 rounded"
             />
             <h3 class="text-center m-0">Dictionary App</h3>
@@ -96,7 +102,7 @@
           <div class="col-md-6 mb-4">
             <img
               src="/images/translation.png"
-              alt=""
+              alt="Translation App Preview"
               class="img-fluid mb-3 rounded"
             />
             <h3 class="text-center m-0">Translation App</h3>
@@ -107,6 +113,60 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div
+        class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+      >
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="/contact.html"
+            class="btn btn-branding"
+            title="Contact Freya"
+          >
+            Contact Me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:collie.freya@gmail.com"
+          class="email-link"
+          title="Email Freya"
+          >collie.freya@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.instagram.com/freya.codes"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a
+          href="https://github.com/Amel-coder-dot"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <a href="https://www.x.com/freya" target="_blank" title="X Profile">
+          <i class="fa-brands fa-x"></i>
+        </a>
+      </div>
+      <p class="text-center mt-5">
+        🫰 This project was coded by Freya, and it is
+        <a
+          href="https://github.com/Amel-coder-dot/portfolio-project"
+          target="_blank"
+          >open-sourced</a
+        >
+      </p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
